# beckawave-limited

./: Cargo.toml  README.md
beckawave_limited_backend/: Cargo.toml
beckawave_limited_backend/src/: main.rs
bekawave-frontend-web/: package-lock.json  package.json  tailwind.config.ts
bekawave-rust-backend/: .env  Cargo.toml
bekawave-rust-backend/.fleet/: run.json
bekawave-rust-backend/migrations/: 01_migration_schema.sql  bekawave_ERD  bekawave_ERD.pgerd
bekawave-rust-backend/src/: main.rs
bekawave-rust-backend/src/controllers/: customer_controller.rs  debt_controller.rs  downloads_controller.rs  mod.rs  product_controller.rs  sales_controller.rs  sales_pair_controller.rs  sales_rep_controller.rs  stock_controller.rs  store_controller.rs
bekawave-rust-backend/src/models/: customer.rs  debt.rs  error_response.rs  mod.rs  product.rs  response.rs  sales.rs  salesPair.rs  salesRep.rs  sales_pair.rs  sales_rep.rs  stock.rs  store.rs
bekawave-rust-backend/src/services/: customer_service.rs  debt_service.rs  download_file.rs  mod.rs  product_service.rs  sales_pair_service.rs  sales_rep_service.rs  sales_service.rs  stock_service.rs  store_service.rs
bekawave_limited_frontend/: App.tsx  app.json  package-lock.json  package.json
bekawave_web/: Sidebar.html  jest.config.js  package.json  tailwind.config.js  tsconfig.json
bekawave_web/api/: BackendRequests.tsx
bekawave_web/components/: BottomNavBar.tsx  Cards.tsx  InventoryModal.tsx  SalesAnalytics.tsx  Sidebar.tsx  Timeline.tsx  logo.tsx  notification.tsx
bekawave_web/config/: fonts.ts
bekawave_web/context/: CustomerContext.tsx  DebtContext.tsx  (+3 more)
(+63 files in other folders)
