[package]
name = "bekawave-rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
async-graphql-rocket = "7.0.7"
async-graphql = "7.0.7"
shuttle-rocket = "0.46.0"
shuttle-runtime = { version = "0.46.0" }
tokio = "1.26.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-shared-db = { version = "0.46.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.4", features = ["macros", "postgres", "runtime-tokio-rustls"] }
dotenv = "0.15"
tracing = "0.1.40"
thiserror = "1.0.63"
